# logging-agent-llm

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: currency_rates.csv
dataflow/: flow_currency.py
dataflow/constants/: constants.py
dataflow/utils/: loki_handler.py
